--- a/css/styles.css
+++ b/css/styles.css
@@ -406,7 +406,7 @@ img {
 .sceneFinal {
     position: fixed;
     width: 100%;
-    height: 140%;
+    height: 100%;
 }
 
 .homeSlide{
@@ -1066,27 +1066,66 @@ a.boxclose{
 }
 
 .mob_dialogThink{
-	height:360px;
-	background: url('../img/thinking.png') no-repeat scroll center top transparent;
+	height:100%;
+	background: url('../img/thinkingMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
 	position:absolute;
 	width:100%;
 	z-index:15;
 }
 
 .mob_dialogMotivated{
-	height:360px;
-	background: url('../img/motivated.png') no-repeat scroll center top transparent;
-	z-index:15;
+	height:100%;
+	background: url('../img/motivatedMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
 	position:absolute;
 	width:100%;
+	z-index:15;
 }
 
 .mob_dialogSchool{
-	height:360px;
-	background: url('../img/dialogSchool.png') no-repeat scroll center top transparent;
-	z-index:15;
+	height:100%;
+	background: url('../img/schoolMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
 	position:absolute;
 	width:100%;
+	z-index:15;
+}
+
+.mob_dialogTired{
+	height:100%;
+	background: url('../img/tiredMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
+	position:absolute;
+	width:100%;
+	z-index:15;
+}
+
+.mob_dialogDad{
+	height:100%;
+	background: url('../img/dadMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
+	position:absolute;
+	width:100%;
+	z-index:15;
+}
+
+.mob_dialogProblem{
+	height:100%;
+	background: url('../img/problemMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
+	position:absolute;
+	width:100%;
+	z-index:15;
+}
+
+.mob_dialogBatman{
+	height:100%;
+	background: url('../img/batmanMob.png') no-repeat scroll center top transparent;
+	background-size:100% auto;
+	position:absolute;
+	width:100%;
+	z-index:15;
 }
 
 .mob_road {
@@ -1109,8 +1148,26 @@ a.boxclose{
 	max-width:35%;
 }
 
+.solution-mob{
+    height: 14%;
+    width: 80%;
+		border-radius:50%;
+		position:relative;
+}
 
+.solution-mob{
+	position:relative;
+    width:100%;
+    vertical-align:top;
+}
 
+.solution-mob img{
+	max-width:90%;
+}
+
+	.sign-up-mob{
+		font-size:14px;
+	}
 
 
 
@@ -1128,6 +1185,29 @@ a.boxclose{
 		font-size:14px !important;
 		margin-top:20px;
 	}
+	.sub-text-bottom{
+		font-size:14px !important;
+		margin-top:0px;
+	}
+	.solution{
+		height:auto;
+		width:80%;
+	}
+	input[type="text"] {
+		height:40px;
+		padding: 0px 14px;
+		font-size: 10px;
+	}
+	
+	.btn-mail {
+		height:40px;width:40px;
+		margin-top:0px;
+	}
+	
+	.share{
+		margin-top: 10px;
+	}
+
 }
 
 @media only screen and (min-device-width: 1025px) {
@@ -1169,10 +1249,6 @@ a.boxclose{
 
 	#side-table2{
 		display:none !important;
-	}
-
-	.final{
-		display:none;
 	}
 
 }
