--- a/css/styles.css
+++ b/css/styles.css
@@ -1207,6 +1207,21 @@ a.boxclose{
 	.share{
 		margin-top: 10px;
 	}
+	
+	.box{
+		left:10%;
+		right:10%;
+	}
+	
+	a.boxclose1{
+		cursor: pointer;
+background: none repeat scroll 0% 0% rgb(133, 201, 66);
+padding: 10px;
+font-family: "ProximaNova-Regular","SourceSansPro-Light","Arial";
+color: rgb(255, 255, 255);
+border-radius: 4px;
+		font-size:14px;
+	}
 
 }
 
