--- a/css/styles.css
+++ b/css/styles.css
@@ -1035,7 +1035,7 @@ a.boxclose{
 
 #mobile{
 	background:#ccc;
-
+	height:100%;
 }
 
 .mobHeader{
@@ -1174,7 +1174,13 @@ a.boxclose{
 
 @media only screen and (min-device-width: 0px) and (max-device-width: 1024px) {
 	
-
+	#mobile{
+		display:block !important;
+	}
+	
+	#desktop{
+		display:none !important;
+	}
 	.sub-text{
 		font-size:14px !important;
 		margin-top:20px;
@@ -1220,7 +1226,12 @@ border-radius: 4px;
 }
 
 @media only screen and (min-device-width: 1025px) {
-
+	#mobile{
+		display:none !important;
+	}
+	#desktop{
+		display:block !important;
+	}
 }
 
 
